<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="xyz.geryakbarf.rakityuk.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
    </fragment>


    <fragment
        android:id="@+id/navigation_notifications"
        android:name="xyz.geryakbarf.rakityuk.ui.fragment.DiskusiFragment"
        android:label="@string/ruang_diskusi"
        tools:layout="@layout/fragment_diskusi">
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="xyz.geryakbarf.rakityuk.ui.fragment.FragmentAkun"
        android:label="@string/akun"
        tools:layout="@layout/fragment_akun" />

</navigation>